objects/ssot__LifeScienceMarketableProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AllowedDistributionMethod__c</fullName>
        <label>Allowed Distribution Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BoxInnerQuantity__c</fullName>
        <label>Box Quantity Inner</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BoxOuterQuantity__c</fullName>
        <label>Box Quantity Outer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DefaultDistributionQuantity__c</fullName>
        <label>Default Distribution Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Life Science Marketable Product Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsAvailableForSamplingAllocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Available For Sampling Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsCompetitorProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Competitor Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsMessageRequiredforProviderVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Message Required for Provider Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsSampleLotNumbersRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sample Lot Numbers Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LaunchDate__c</fullName>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ManufacturerName__c</fullName>
        <label>Manufacturer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaxSampleOrderQuantity__c</fullName>
        <label>Max Sample Order Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MinSampleOrderQuantity__c</fullName>
        <label>Min Sample Order Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NationalDrugCode__c</fullName>
        <label>National Drug Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentBrandProductId__c</fullName>
        <label>Parent Brand Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentIndicationId__c</fullName>
        <label>Parent Indication</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentProductId__c</fullName>
        <label>Parent Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentTherapeuticAreaId__c</fullName>
        <label>Parent Therapeutic Area</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductMetadataText__c</fullName>
        <label>Product Metadata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductShortCode__c</fullName>
        <label>Product Short Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductionCostAmount__c</fullName>
        <label>Production Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SignatureRequirementLevel__c</fullName>
        <label>Signature Requirement Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SortOrderNumber__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StateDistributorLicenseCategory__c</fullName>
        <label>State Distributor License Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TherapeuticArea__c</fullName>
        <label>Therapeutic Area</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TherapeuticClass__c</fullName>
        <label>Therapeutic Class</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561249464_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LifeScienceMarketableProduct_ParentT_rel</label>
        <referenceTo>ssot__LifeScienceMarketableProduct__dlm</referenceTo>
        <relationshipLabel>LifeScienceMarketableProduct_ParentT_rel</relationshipLabel>
        <relationshipName>rel_1745561249464_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561251245_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LifeScienceMarketableProduct_ParentI_rel</label>
        <referenceTo>ssot__LifeScienceMarketableProduct__dlm</referenceTo>
        <relationshipLabel>LifeScienceMarketableProduct_ParentI_rel</relationshipLabel>
        <relationshipName>rel_1745561251245_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561256144_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LifeScienceMarketableProduct_Product_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>LifeScienceMarketableProduct_Product_rel</relationshipLabel>
        <relationshipName>rel_1745561256144_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>